<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/futureFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_round_corners">

    <EditText
        android:id="@+id/userNameEt"
        style="@style/RoundEditText"
        android:layout_marginTop="60dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="@string/user_name"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEt"
        style="@style/RoundEditText"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameEt" />


    <EditText
        android:id="@+id/passwordEt"
        style="@style/RoundEditText"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_baseline_key_24"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/emailEt"
        app:layout_constraintStart_toStartOf="@id/emailEt"
        app:layout_constraintTop_toBottomOf="@id/emailEt" />


    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/userNameEt"
        app:layout_constraintEnd_toEndOf="@+id/emailEt"
        app:layout_constraintStart_toStartOf="@id/emailEt"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/continueWithTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/continue_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEt" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continueWithTv" />


    <Button
        android:id="@+id/signUpBtn"
        style="@style/MainButton"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/alreadyHaveAnAccountTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/googleSignInButton" />

    <TextView
        android:id="@+id/alreadyHaveAnAccountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/login_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>